--- a/index.css
+++ b/index.css
@@ -16,10 +16,12 @@ body {
 }
 
 #links{	
+	text-align: center;
+	padding-left: 150px;
 	color: #FFA500;
 	float: left;
 	width: 250px;
-	height: 1000px;
+	height: 4000px;
 	font-size: 25px;
 }
 
@@ -48,11 +50,17 @@ body {
 	color: white;
 	margin-left: 260px;
 	text-align: center;	
-	font-size: 25px;
+	font-size: 25px;	
 }
 
 #link_header{
 	text-align: center;
-	border-radius: 666px;
-	border-color: black;	
+	margin-bottom: 10px;
+	margin-top: 10px;		
+}
+
+#photo_header{
+	text-align: center;
+	margin-bottom: 10px;		
+	margin-top: 10px;
 }
